--- a/quote-calculator/fencing.html
+++ b/quote-calculator/fencing.html
@@ -4,188 +4,265 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Quote Calculators</title>
+<link rel="canonical" href="https://homerepairs4u.com/quote-calculator/">
 <style>
-body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 20px; margin: 0; }
-h1 { text-align:center; margin-bottom:10px; }
-.intro { text-align:center; margin-bottom:20px; color:#555; }
-.calc-button, .quote-button, .close-button, .service-info-btn { cursor:pointer; border:none; border-radius:8px; transition:0.3s; }
-.calc-button { background:#ff6b6b; color:white; padding:10px 20px; margin-bottom:10px; }
-.calc-button:hover { background:#ff4757; }
-.quote-button { background:#1e90ff; color:white; padding:10px; width:100%; margin-top:10px; }
-.quote-button:hover { background:#0077cc; }
-.service-info-btn { background:#555; color:white; padding:8px 15px; margin-top:10px; display:none; }
-.service-info-btn:hover { background:#333; }
-.calc-container { background:#fff; border-radius:12px; padding:20px; margin-bottom:30px; box-shadow:0 8px 20px rgba(0,0,0,0.08); }
-.calc-container img { max-width:100%; border-radius:8px; margin-bottom:10px; }
-.calculator { display:flex; flex-direction:column; gap:10px; }
-label { margin-top:10px; font-weight:500; }
-input, select { width:100%; padding:8px; font-size:16px; border-radius:4px; border:1px solid #ccc; }
-.result { background:#eef6ff; padding:15px; border-radius:8px; margin-top:10px; }
+body { font-family: 'Montserrat', sans-serif; background: #f4f7f8; padding: 30px; margin: 0; }
+h1 { text-align: center; margin-bottom: 10px; }
+.intro { text-align: center; margin-bottom: 20px; font-size: 16px; color: #555; }
+
+.calc-button, .view-image-button, .quote-button, .close-button, .service-info-button {
+cursor: pointer; border: none; border-radius: 8px; transition: 0.3s;
+}
+.calc-button { background: #ff6b6b; color: white; padding: 10px 20px; margin-bottom: 20px; }
+.calc-button:hover { background: #ff4757; }
+.view-image-button { background: #1e90ff; color: white; padding: 6px 12px; margin-bottom: 5px; }
+.view-image-button:hover { background: #0077cc; }
+.quote-button { margin-top: 20px; width: 100%; background: #1e90ff; color: white; padding: 10px; }
+.quote-button:hover { background: #0077cc; }
+.close-button { margin-top: 10px; width: 100%; background: #888; color: white; padding: 8px; }
+.close-button:hover { background: #555; }
+.service-info-button { margin-top: 10px; width: 100%; background: #ffa500; color: white; padding: 10px; display:none; }
+.service-info-button:hover { background: #e69500; }
+
+.calculators-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); gap: 30px; }
+.calc-container { position: relative; border-radius: 12px; min-height: 350px; display: flex; flex-direction: column; justify-content: flex-end; color: #fff; padding: 20px; background-size: cover; background-position: center; overflow: hidden; box-shadow: 0 8px 20px rgba(0,0,0,0.1); }
+.calc-container::before { content: ''; position: absolute; inset: 0; background: rgba(0,0,0,0.4); z-index: 0; }
+.calc-container > * { position: relative; z-index: 1; }
+
+.calculator { display: none; margin-top: 15px; padding: 20px; border-radius: 12px; background: #fff; color: #2a2f45; }
+label { display:block; margin-top:15px; }
+input, select { width:100%; padding:8px; margin-top:5px; }
+
+.result { margin-top:20px; background:#eef6ff; padding:15px; border-radius:8px; }
 .highlight { font-weight:bold; color:#ff4757; }
+
+.image-modal { display: none; position: fixed; z-index: 999; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); }
+.image-modal img { display: block; margin: 5% auto; max-width: 80%; max-height: 300px; border-radius: 10px; }
+
+hr { margin:60px 0; }
+
+@media (max-width: 768px) {
+body { padding: 10px; }
+h1 { font-size: 24px; }
+.calculators-grid { gap: 20px; }
+input, select { font-size: 16px; }
+.result { font-size: 15px; }
+}
 </style>
 </head>
 <body>
 
+<!-- ================= FENCING ================= -->
 <h1>Fencing Quote Calculator</h1>
-<p class="intro">Adjust your measurements and press Generate Quote.</p>
-
-<div class="calc-container">
-<img src="/images/closeboard.webp" alt="Fence">
-<h3>Closeboard Featheredge Fence</h3>
-<div class="calculator">
-<label>Fence Length (m)</label>
-<input type="number" id="fLength" value="10" min="1">
-<label>Height (ft)</label>
-<select id="fHeight">
-<option value="4">4ft</option>
-<option value="5">5ft</option>
-<option value="6">6ft</option>
-</select>
-<label>Gate Required?</label>
-<select id="fGate">
-<option value="0">No</option>
-<option value="1">Yes</option>
-</select>
-<button class="quote-button" id="fGenerate">Generate Quote</button>
-<button class="service-info-btn" id="fInfoBtn">Service Info</button>
-<div class="result" id="fResult">Quote will appear here.</div>
-</div>
+<p class="intro">Click below to view fencing options.</p>
+<button class="calc-button" onclick="toggleSection('fencingSection')">View Options</button>
+<div id="fencingSection" style="display:none;">
+<div class="calculators-grid" id="fenceContainer"></div>
 </div>
 
 <hr>
 
+<!-- ================= GUTTERS ================= -->
 <h1>Gutter Services Quote</h1>
-<p class="intro">Adjust your measurements and press Generate Quote.</p>
-
-<div class="calc-container">
-<img src="/images/gutter-clearing.webp" alt="Gutter">
-<h3>Gutter Clearing (£4.50/m)</h3>
-<div class="calculator">
-<label>Length (m)</label>
-<input type="number" id="gLength" value="10" min="1">
-<button class="quote-button" id="gGenerate">Generate Quote</button>
-<button class="service-info-btn" id="gInfoBtn">Service Info</button>
-<div class="result" id="gResult"></div>
-</div>
+<p class="intro">Click below to view gutter service options.</p>
+<button class="calc-button" onclick="toggleSection('gutterSection')">View Options</button>
+<div id="gutterSection" style="display:none;">
+<div class="calculators-grid" id="gutterContainer"></div>
 </div>
 
 <hr>
 
+<!-- ================= PRESSURE WASHING ================= -->
 <h1>Pressure Washing Quote</h1>
-<p class="intro">Adjust your measurements and press Generate Quote.</p>
-
-<div class="calc-container">
-<img src="/my-images/driveway.webp" alt="Pressure Washing">
-<h3>Driveways (£3/m²)</h3>
-<div class="calculator">
-<label>Area (m²)</label>
-<input type="number" id="pDriveway" value="20" min="1">
-<button class="quote-button" id="pGenerate">Generate Quote</button>
-<button class="service-info-btn" id="pInfoBtn">Service Info</button>
-<div class="result" id="pResult"></div>
-</div>
+<p class="intro">Click below to view pressure washing options.</p>
+<button class="calc-button" onclick="toggleSection('pressureSection')">View Options</button>
+<div id="pressureSection" style="display:none;">
+<div class="calculators-grid" id="pressureContainer"></div>
 </div>
 
 <hr>
 
+<!-- ================= EXTERIOR DECORATING ================= -->
 <h1>Exterior Decorating Quote</h1>
-<p class="intro">Adjust your measurements and press Generate Quote.</p>
-
-<div class="calc-container">
-<img src="/my-images/exterior.webp" alt="Exterior Decorating">
-<h3>Exterior Decorating</h3>
-<div class="calculator">
-<label>House Side 1 (m²)</label>
-<input type="number" id="eSide1" value="50" min="1">
-<label>House Side 2 (m²)</label>
-<input type="number" id="eSide2" value="50" min="1">
-<label>House Side 3 (m²)</label>
-<input type="number" id="eSide3" value="50" min="1">
-<label>House Side 4 (m²)</label>
-<input type="number" id="eSide4" value="50" min="1">
-<label>Steel Gates & Rails (m²)</label>
-<input type="number" id="eGates" value="10" min="0">
-<label>Fence Panels & Outer Buildings (m²)</label>
-<input type="number" id="eFence" value="20" min="0">
-<button class="quote-button" id="eGenerate">Generate Quote</button>
-<button class="service-info-btn" id="eInfoBtn">Service Info</button>
-<div class="result" id="eResult"></div>
-</div>
+<p class="intro">Click below to view exterior decorating options.</p>
+<button class="calc-button" onclick="toggleSection('decorSection')">View Options</button>
+<div id="decorSection" style="display:none;">
+<div class="calculators-grid" id="decorContainer"></div>
 </div>
 
 <script>
+// TOGGLE SECTION
+function toggleSection(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
+// TOGGLE CALCULATOR
+function toggleCalculator(id){ const el=document.getElementById(id); el.style.display=el.style.display==="block"?"none":"block"; }
+// IMAGE MODAL
+function openImage(id){ document.getElementById(id).style.display="block"; }
+function closeImage(el){ el.style.display="none"; }
+
 // ================= FENCING =================
-const fPrices = {4:22,5:27,6:32};
-const fLabourPerM = 50;
-const fPostPrice = 17;
-const fGravelPrice = 17;
-const fPostcrete = 6;
-const fPanelWidth = 1.8;
-const fGateDeduct = 1.2;
-const fGatePrice = 120;
+const fences = [
+{name:"Closeboard Featheredge", img:"/images/closeboard.webp", prices:{4:22,5:27,6:32}},
+{name:"Double Side Hit Miss", img:"/images/double-hit-miss.webp", prices:{4:24,5:29,6:34}},
+{name:"Double Side Concave", img:"/images/concave.webp", prices:{4:25,5:30,6:36}},
+{name:"Venetian", img:"/images/venetian.webp", prices:{4:23,5:28,6:33}},
+{name:"Urban Hedge", img:"/images/urban-hedge.webp", prices:{4:21,5:26,6:31}},
+{name:"Single Hit Miss", img:"/images/hit-miss.webp", prices:{4:22,5:27,6:32}}
+];
 
-function calcFence(){
-let length = parseFloat(document.getElementById("fLength").value);
-let height = parseInt(document.getElementById("fHeight").value);
-let gate = parseInt(document.getElementById("fGate").value);
-let adjLength = length;
-if(gate===1){ adjLength -= fGateDeduct; if(adjLength<0) adjLength=0; }
-let panels = Math.ceil(adjLength/fPanelWidth);
-let posts = panels + 1 + gate;
-let gravel = panels;
-let postcreteBags = posts*2;
-let materialCost = panels*fPrices[height] + posts*fPostPrice + gravel*fGravelPrice + postcreteBags*fPostcrete + (gate===1?fGatePrice:0);
-let labourCost = length*fLabourPerM;
-let total = materialCost + labourCost;
-document.getElementById("fResult").innerHTML = `<strong>Total:</strong> £${total.toFixed(2)}`;
-document.getElementById("fInfoBtn").style.display="inline-block";
+const fenceContainer = document.getElementById("fenceContainer");
+fences.forEach((f,i)=>{
+const id=i+1;
+fenceContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${f.img}')">
+<h3>${f.name}</h3>
+<button class="view-image-button" onclick="openImage('fImg${id}')">View Image</button>
+<div id="fImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${f.img}"></div>
+<div class="calculator" id="f${id}">
+<label>Length (m)</label>
+<input type="number" id="fLen${id}" value="10">
+<label>Height (ft)</label>
+<select id="fHeight${id}"><option value="4">4ft</option><option value="5">5ft</option><option value="6">6ft</option></select>
+<label>Gate Required?</label>
+<select id="fGate${id}"><option value="0">No</option><option value="1">Yes</option></select>
+<button class="quote-button" onclick="calcFence(${id})">Generate Quote</button>
+<div class="service-info-button" id="fInfo${id}">Service involves installation of panels, posts, gravel boards and cement bags.</div>
+<div class="result" id="fRes${id}"></div>
+</div>
+</div>`;
+});
+
+function calcFence(id){
+let length=parseFloat(document.getElementById("fLen"+id).value);
+let height=document.getElementById("fHeight"+id).value;
+let gate=parseInt(document.getElementById("fGate"+id).value);
+let panelPrice=fences[id-1].prices[height];
+let panelWidth=1.8;
+let gravelPrice=17;
+let postPrice=17;
+let postMixPrice=6;
+let labourPerM=50;
+let gateDeduct=1.2;
+let gatePrice=120;
+
+// Adjust for gate
+let adjustedLength=length;
+if(gate===1){ adjustedLength-=gateDeduct; if(adjustedLength<0) adjustedLength=0; }
+
+// Calculations
+let panels=Math.ceil(adjustedLength/panelWidth);
+let posts=panels+1+gate;
+let gravelBoards=panels;
+let postMixBags=posts*2;
+
+let materialCost=(panels*panelPrice)+(gravelBoards*gravelPrice)+(posts*postPrice)+(postMixBags*postMixPrice)+(gate===1?gatePrice:0);
+let labourCost=length*labourPerM;
+let total=materialCost+labourCost;
+
+document.getElementById("fRes"+id).innerHTML=`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("fInfo"+id).style.display="block";
 }
-
-// auto-update
-document.getElementById("fLength").addEventListener("input", calcFence);
-document.getElementById("fHeight").addEventListener("change", calcFence);
-document.getElementById("fGate").addEventListener("change", calcFence);
-document.getElementById("fGenerate").addEventListener("click", calcFence);
 
 // ================= GUTTERS =================
-const gRate = 4.5;
-function calcGutter(){
-let len = parseFloat(document.getElementById("gLength").value);
-let total = len * gRate;
-document.getElementById("gResult").innerHTML = `<strong>Total:</strong> £${total.toFixed(2)}`;
-document.getElementById("gInfoBtn").style.display="inline-block";
+const gutters = [
+{name:"Gutter Clearing", img:"/images/gutter-clearing.webp", rate:4.5},
+{name:"Gutter & Fascia Cleaning", img:"/images/cleaned-gutters-before-after.webp", rate:4},
+{name:"Gutter Replacement", img:"/images/gutter-alignment.webp", rate:30}
+];
+
+const gutterContainer=document.getElementById("gutterContainer");
+gutters.forEach((g,i)=>{
+const id=i+1;
+gutterContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${g.img}')">
+<h3>${g.name} (£${g.rate}/m)</h3>
+<button class="view-image-button" onclick="openImage('gImg${id}')">View Image</button>
+<div id="gImg${id}" class="image-modal" onclick="closeImage(this)"><img src="${g.img}"></div>
+<div class="calculator" id="g${id}">
+<label>Length (m)</label>
+<input type="number" id="gLen${id}" value="10">
+<button class="quote-button" onclick="calcGutter(${id})">Generate Quote</button>
+<div class="service-info-button" id="gInfo${id}">Service involves cleaning/replacement of gutters with proper materials.</div>
+<div class="result" id="gRes${id}"></div>
+</div>
+</div>`;
+});
+
+function calcGutter(id){
+let len=parseFloat(document.getElementById("gLen"+id).value);
+let rate=gutters[id-1].rate;
+let total=len*rate;
+document.getElementById("gRes"+id).innerHTML=`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("gInfo"+id).style.display="block";
 }
-document.getElementById("gLength").addEventListener("input", calcGutter);
-document.getElementById("gGenerate").addEventListener("click", calcGutter);
 
 // ================= PRESSURE WASHING =================
-const pRateDriveway = 3;
-function calcPressure(){
-let area = parseFloat(document.getElementById("pDriveway").value);
-let total = area * pRateDriveway;
-document.getElementById("pResult").innerHTML = `<strong>Total:</strong> £${total.toFixed(2)}`;
-document.getElementById("pInfoBtn").style.display="inline-block";
+const pressure = [
+{name:"Driveways", img:"/images-my-images/driveway.webp", rate:3},
+{name:"Roof", img:"/images-my-images/roof.webp", rate:8},
+{name:"Patio", img:"/images-my-images/patio.webp", rate:3},
+{name:"Walls", img:"/images-my-images/walls.webp", rate:4},
+{name:"Fence", img:"/images-my-images/fence.webp", rate:2.5}
+];
+
+const pressureContainer=document.getElementById("pressureContainer");
+pressure.forEach((p,i)=>{
+const id=i+1;
+pressureContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${p.img}')">
+<h3>${p.name} (£${p.rate}/m²)</h3>
+<button class="calc-button" onclick="toggleCalculator('p${id}')">Get Quote</button>
+<div class="calculator" id="p${id}">
+<label>Area (m²)</label>
+<input type="number" id="pArea${id}" value="10">
+<button class="quote-button" onclick="calcPressure(${id})">Generate Quote</button>
+<div class="service-info-button" id="pInfo${id}">Service involves cleaning selected surfaces to professional standards.</div>
+<div class="result" id="pRes${id}"></div>
+</div>
+</div>`;
+});
+
+function calcPressure(id){
+let area=parseFloat(document.getElementById("pArea"+id).value);
+let rate=pressure[id-1].rate;
+let total=area*rate;
+document.getElementById("pRes"+id).innerHTML=`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("pInfo"+id).style.display="block";
 }
-document.getElementById("pDriveway").addEventListener("input", calcPressure);
-document.getElementById("pGenerate").addEventListener("click", calcPressure);
 
 // ================= EXTERIOR DECORATING =================
-const eRates = {house:12, gates:7, fence:3.5};
-function calcExterior(){
-let s1 = parseFloat(document.getElementById("eSide1").value);
-let s2 = parseFloat(document.getElementById("eSide2").value);
-let s3 = parseFloat(document.getElementById("eSide3").value);
-let s4 = parseFloat(document.getElementById("eSide4").value);
-let gates = parseFloat(document.getElementById("eGates").value);
-let fence = parseFloat(document.getElementById("eFence").value);
-let total = s1*eRates.house + s2*eRates.house + s3*eRates.house + s4*eRates.house + gates*eRates.gates + fence*eRates.fence;
-document.getElementById("eResult").innerHTML = `<strong>Total:</strong> £${total.toFixed(2)}`;
-document.getElementById("eInfoBtn").style.display="inline-block";
-}
-["eSide1","eSide2","eSide3","eSide4","eGates","eFence"].forEach(id=>{
-document.getElementById(id).addEventListener("input", calcExterior);
+const decor = [
+{name:"House Sides 1-4", img:"/my-images/house-sides.webp", rate:12},
+{name:"Steel Gates & Rails", img:"/my-images/gates.webp", rate:7},
+{name:"Fence Panels & Outer Buildings", img:"/my-images/fence-buildings.webp", rate:3.5}
+];
+
+const decorContainer=document.getElementById("decorContainer");
+decor.forEach((d,i)=>{
+const id=i+1;
+decorContainer.innerHTML += `
+<div class="calc-container" style="background-image:url('${d.img}')">
+<h3>${d.name} (£${d.rate}/m²)</h3>
+<button class="calc-button" onclick="toggleCalculator('d${id}')">Get Quote</button>
+<div class="calculator" id="d${id}">
+<label>Length (m)</label>
+<input type="number" id="dLen${id}" value="10">
+<label>Height (m)</label>
+<input type="number" id="dHeight${id}" value="3">
+<button class="quote-button" onclick="calcDecor(${id})">Generate Quote</button>
+<div class="service-info-button" id="dInfo${id}">Service involves professional exterior painting and coating.</div>
+<div class="result" id="dRes${id}"></div>
+</div>
+</div>`;
 });
-document.getElementById("eGenerate").addEventListener("click", calcExterior);
+
+function calcDecor(id){
+let len=parseFloat(document.getElementById("dLen"+id).value);
+let height=parseFloat(document.getElementById("dHeight"+id).value);
+let rate=decor[id-1].rate;
+let total=len*height*rate;
+document.getElementById("dRes"+id).innerHTML=`<strong>Total:</strong><h2>£${total.toFixed(2)}</h2><a href="tel:07735873694">Call Now</a>`;
+document.getElementById("dInfo"+id).style.display="block";
+}
 </script>
 
 </body>
